# Cortex---AI-Memory

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SPEC.md  pyproject.toml  requirements.txt
.github/: BRANCH_PROTECTION.md  pull_request_template.md
.github/workflows/: ci.yml
config/: seed_reputation.json  tags.json
cortex/: __init__.py  config.py  orchestrator.py
cortex/agents/: __init__.py  architecture.py  base.py  evaluator.py  execution.py  planner.py  research.py  risk.py
cortex/api/: app.py
cortex/core/: classifier.py  consensus.py  cost_calculator.py  memory_retriever.py  reputation.py  schema_validator.py  trace_logger.py
cortex/providers/: __init__.py  interface.py  mock.py  qwen.py
cortex/schemas/: __init__.py  package.py  proposal.py  vote.py
cortex/storage/: __init__.py  db.py  schema.sql
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: ConsensusPanel.tsx  DebateGraph.tsx  ImprovementBanner.tsx  PipelineFlow.tsx  ReputationPanel.tsx  RunConsole.tsx  TraceTimeline.tsx
frontend/src/components/layout/: Sidebar.tsx  Topbar.tsx
frontend/src/components/ui/: Badge.tsx  Panel.tsx  ScoreBar.tsx  StatCard.tsx
frontend/src/data/: mock.ts
frontend/src/lib/: agents.ts  format.ts
scripts/: demo.py
tests/: test_consensus.py  test_loop_smoke.py  test_money_shot.py  test_reputation.py
